fixed for Search feature: Long search results are not wrapping but instead running outside the search box.   This is occurring in both the listed results and the actual search field.

--- a/Chalkable.Web/assets/sass/partials/main/search/_common.scss
+++ b/Chalkable.Web/assets/sass/partials/main/search/_common.scss
@@ -18,8 +18,10 @@ ul.ui-autocomplete{
         font-weight: normal;
         width: 160px;
         border: 0;
-        height: 70px;
+        min-height: 70px;
         padding: 0;
+        overflow: hidden;
+        word-break: break-all;
 
         >div.site-search-person, >div.site-search-class, >div.site-search-attachment, >div.site-search-announcement{
           margin-top: 10px;
